tests/fixtures/pass/dynamic_array_index.sc
let main(): i32 = {
  let values = [40, 2]
  let index = 1
  values[0] + values[index]
}
