tests/fixtures/fail/raw_alloc_safe.sc
let main(): i32 = {
  let pointer = raw_alloc(i32)(4, 4)
  0
}
